--- a/templates/index.html
+++ b/templates/index.html
@@ -1,168 +1,173 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - In Bloom: Fruity Ecommerce</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/gh-pages/css/shop-homepage.css'><link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <title>CodePen - In Bloom: Fruity Ecommerce</title>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <link rel='stylesheet'
+          href='https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/gh-pages/css/shop-homepage.css'>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <title>in bl00m</title>
 
-    <!--googlefont for Branding-->
-    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+<!--googlefont for Branding-->
+<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 
-    <!--font awesome for icons-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<!--font awesome for icons-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!--Bootstrap Core CSS -->
+<!--Bootstrap Core CSS -->
 <!--     <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 
-    <!-- Custom CSS for SHOP -->
+<!-- Custom CSS for SHOP -->
 <!--     <link href="css/shop-homepage.css" rel="stylesheet">
  -->
-    <!--custom CSS for unique STYLING
-    <link href="css/styles.css" rel="stylesheet">
+<!--custom CSS for unique STYLING
+<link href="css/styles.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">in bl00m</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#"><i class="fa fa-heart-o"></i> </i>Our Story</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-commenting-o"></i> Say Hi</a>
-                    </li>
-                    <li id="cart" onclick="cartFunction()"><a href="#"><i class="fa fa-shopping-basket"></i>  Your Basket</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    <!-- Page Content -->
+<!-- Navigation -->
+<nav class="navbar navbar-fixed-top" role="navigation">
     <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">in bl00m</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#"><i class="fa fa-heart-o"></i> </i>Our Story</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-commenting-o"></i> Say Hi</a>
+                </li>
+                <li id="cart" onclick="cartFunction()"><a href="#"><i class="fa fa-shopping-basket"></i> Your Basket</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
 
-        <div class="row">
+<!-- Page Content -->
+<div class="container">
 
-            <div class="col-md-3">
-                <p class="lead">in-season-local-regional produce to your door, every monday: because mondays don't have to suck</p>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Citrus</a>
-                    <a href="#" class="list-group-item">Berries</a>
-                    <a href="#" class="list-group-item">Stone Fruit</a>
-                    <a href="#" class="list-group-item">Melons</a>
-                    <a href="#" class="list-group-item">Tropical</a>
-                </div>
+    <div class="row">
+
+        <div class="col-md-3">
+            <p class="lead">in-season-local-regional produce to your door, every monday: because mondays don't have to
+                suck</p>
+            <div class="list-group">
+                {% for i in categories %}
+                <a href="#" style="font-family:sans-serif" class="list-group-item">{{ i.title }}</a>
+                {% endfor %}
             </div>
+        </div>
 
-            <div class="col-md-9">
+        <div class="col-md-9">
 
-                <div class="row carousel-holder">
+            <div class="row carousel-holder">
 
-                    <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="slide-image" src="https://github.com/tesslynne/Bloom-Ecommerce-Fruit/blob/master/images/inbloom.jpg?raw=true" alt="seasonal produce for your health">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="https://github.com/tesslynne/Bloom-Ecommerce-Fruit/blob/master/images/blossoms.jpg?raw=true" alt="season fruit">
-                                </div>
+                <div class="col-md-12">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="slide-image"
+                                     src="https://github.com/tesslynne/Bloom-Ecommerce-Fruit/blob/master/images/inbloom.jpg?raw=true"
+                                     alt="seasonal produce for your health">
                             </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                            <div class="item">
+                                <img class="slide-image"
+                                     src="https://github.com/tesslynne/Bloom-Ecommerce-Fruit/blob/master/images/blossoms.jpg?raw=true"
+                                     alt="season fruit">
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                                 <span class="glyphicon gly
                                 phicon-chevron-left"></span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                            </a>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                    </div>
+                </div>
+
+            </div><!--end of carosouel holder div-->
+            <input type="text" placeholder="Search">
+            <button class="btn btn-primary" type="submit">Search</button>
+            <!--ECOMMERCE ITEMS - POPULATE WITH JAVASCRIPT ONLY-->
+            <div class="row">
+                {% for product in products %}
+                <div class="col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="{{ product.image.url }}" width="200px" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ product.title }}</h5>
+                            <p class="card-text">{{ product.description }}</p>
+                            <a href="/products/{{ product.id }}" class="btn btn-primary">See more</a>
                         </div>
                     </div>
+                  </div>
+                {% endfor %}
+            </div>
 
-                 </div><!--end of carosouel holder div-->
 
-<!--ECOMMERCE ITEMS - POPULATE WITH JAVASCRIPT ONLY-->                  
-        
+        </div><!--end of col md9 on line 79-->
+
+    </div> <!--end row-->
+
+</div>
+<!-- /.container -->
+
+<div class="container">
+
+    <hr>
+
+    <!-- Footer -->
+    <footer>
         <div class="row">
-
-            <div id="fruits">
-
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2016</p>
+                <p><a href="#">About in bloom</a></p>
+                <p><a href="#">Your account</a></p>
             </div>
-
         </div>
+    </footer>
 
-     
-
-
-      
-
-                
-
-                   
-
-
-                    
-
-                </div><!--end of col md9 on line 79-->
-
-            </div> <!--end row-->
-
-    </div>
-    <!-- /.container -->
-
-    <div class="container">
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2016</p>
-                    <p><a href="#">About in bloom</a></p>
-                    <p><a href="#">Your account</a></p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
-    <!-- /.container -->
+</div>
+<!-- /.container -->
 <!-- partial -->
-  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<script src="{% static 'script.js' %}"></script>
 
 </body>
 </html>
