--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <title>Signup</title>
 </head>
 <body>
-<form method="post">
+<form method="POST">
 <!--    csrf_token это метод шифрования-->
     {% csrf_token %}
     {{ form.as_p }}
