--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,11 @@
                     <a href="#"><i class="fa fa-heart-o"></i> </i>Our Story</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-commenting-o"></i> Signup</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'profile' %}"><i class="fa fa-commenting-o"></i>{{ user.username }}</a>
+                    {% else %}
+                        <a href="{% url 'signup' %}"><i class="fa fa-commenting-o"></i>Signup</a>
+                    {% endif %}
                 </li>
                 <li id="cart" onclick="cartFunction()"><a href="#"><i class="fa fa-shopping-basket"></i> Your Basket</a>
                 </li>
