--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h3>This is profile page</h3>
+<h3>Username: {{ user.username }}</h3>
+<h3>Last name: {{ user.last_name }}</h3>
+<h3>Email: {{ user.email }}</h3>
+<a href="{% url 'logout' %}">Logout</a>
 </body>
 </html>
