--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                         <a href="{% url 'signup' %}"><i class="fa fa-commenting-o"></i>Signup</a>
                     {% endif %}
                 </li>
-                <li id="cart" onclick="cartFunction()"><a href="#"><i class="fa fa-shopping-basket"></i> Your Basket</a>
+                <li id="cart" ><a href="/user_cart"><i class="fa fa-shopping-basket"></i> Your Basket</a>
                 </li>
             </ul>
         </div>
