--- a/templates/index.html
+++ b/templates/index.html
@@ -139,9 +139,13 @@
                     {% endfor %}
                 </ul>
             {% endif %}
-            <div class="row">
+             <span class="current">
+            Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}.
+        </span>
+            <br>
+            <div class="row mt-5">
                 {% for product in products %}
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-top: 2%;">
                     <div class="card" style="width: 18rem;">
                         <img src="{{ product.image.url }}" width="200px" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -153,13 +157,28 @@
                                 <input type="number" min="1" value="1" name="pr_count">
                                 <button class="btn btn-success"><i class="fa fa-shopping-basket"></i></button>
                             </form>
+                            <form action="/add_to_wishlist/{{ product.id }}" method="post">
+                                {% csrf_token %}
+                                <button  class="btn btn-warning">Wishlist</button>
+                            </form>
                         </div>
                     </div>
                   </div>
                 {% endfor %}
             </div>
 
-
+      <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a class="btn btn-primary" href="?page=1">&laquo; first</a>
+            <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+        {% if page_obj.has_next %}
+            <a class="btn btn-primary" href="?page={{ page_obj.next_page_number }}">next</a>
+            <a class="btn btn-primary" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
         </div><!--end of col md9 on line 79-->
 
     </div> <!--end row-->
